welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.code
def dogHouse(){
	for(i<-0 to 4){
		i=i+1;
		avance();
		avance();
		gauche();
	}
}
	
		

